Bug 469511 - link-escape sequences not enabled by default
Summary: link-escape sequences not enabled by default
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.12.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-05-08 21:34 UTC by Holger
Modified: 2025-02-21 20:04 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Holger 2023-05-08 21:34:41 UTC
SUMMARY

On starting fresh Konsole, escape sequences for links are not enabled. On disabling and reenabling the setting or switching to the default profile, links work thereafter as expected.

STEPS TO REPRODUCE
1. open fresh Konsole
2. printf '\033]8;;%s\033\\%s\033]8;;\033\\\n' "file://$PWD" "Ctrl+Click me"
3. hold ctrl and try to click the printed text

OBSERVED RESULT
No underline, Dolphin does not open the current folder.

You can switch to the default profile again (even though it is the Default) or disable and reenable the setting. This will not fix previously printed "old" links, but it will allow a fresh execution (e.g. cursor-up & enter) of the print command to succeed in a valid clickable link.

EXPECTED RESULT
The link underlines on Ctrl and becomes clickable.

SOFTWARE/OS VERSIONS
Operating System: Kubuntu 23.04
KDE Plasma Version: 5.27.4
KDE Frameworks Version: 5.104.0
Qt Version: 5.15.8
Kernel Version: 6.2.0-20-generic (64-bit)
Graphics Platform: X11
Processors: 8 × Intel® Core™ i7-4700MQ CPU @ 2.40GHz
Memory: 15.5 GiB of RAM
Graphics Processor: Mesa Intel® HD Graphics 4600
Manufacturer: Micro-Star International Co., Ltd.
Product Name: GE70 2OC\2OD\2OE
System Version: REV:1.0

ADDITIONAL INFORMATION
Also affects the kpart embeded in Kate and Dolphin. The rightclick menu allows the work-around, but it is forgotten on exiting the kpart and opening the Konsole again, even if Kate or Dolphin process is kept running.

The workaround is not a suitable solution, to use link-escape-sequence in a shell-script run on opening the Konsole for it, because it cannot "repair" previously printed links.

It used to work in the Konsole version supplied with Kubuntu 22.04 LTS.
Comment 1 Jonathan Kolberg 2024-09-13 05:19:19 UTC
I can confirm this in KDE Neon with konsole 24.08.0
Comment 2 Kurt Hindenburg 2025-02-21 20:04:05 UTC
Git commit ca51c19ad856ebdfa42b2d44b48d502ed81d3b0e by Kurt Hindenburg, on behalf of Juriën Huisman.
Committed on 21/02/2025 at 20:04.
Pushed by hindenburg into branch 'master'.

'Allow escape sequences for links' setting fix in new sessions

The setting 'Allow escape sequences for links' is not applied to new
tabs and instances of Konsole. This is confusing when a user sets the
setting to enabled/allow. It only works after applying a profile, so
after changing the setting and applying the changes it works for the
current tab, but not for any new tabs or Konsole windows.

M  +6    -0    src/terminalDisplay/TerminalDisplay.cpp

https://invent.kde.org/utilities/konsole/-/commit/ca51c19ad856ebdfa42b2d44b48d502ed81d3b0e